--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "nuxt-app",
   "private": true,
-  "type": "module",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -11,8 +10,14 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "electron": "^27.0.2",
+    "electron-builder": "^24.6.4",
     "nuxt": "^3.8.0",
+    "nuxt-electron": "^0.6.0",
+    "vite-plugin-electron": "^0.14.1",
+    "vite-plugin-electron-renderer": "^0.14.5",
     "vue": "^3.3.7",
     "vue-router": "^4.2.5"
-  }
+  },
+  "main": "dist-electron/main.js"
 }
