--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
     "nuxt-electron": "^0.6.0",
     "vite-plugin-electron": "^0.14.1",
     "vite-plugin-electron-renderer": "^0.14.5",
+    "vite-plugin-vuetify": "^1.0.2",
     "vue": "^3.3.7",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vuetify": "^3.3.23"
   },
   "main": "dist-electron/main.js",
-  "version": "0.0.1"
+  "version": "0.0.1",
+  "dependencies": {
+    "@mdi/font": "^7.3.67"
+  }
 }
