⚡ Added window declaration + security restrictions

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "nuxt-app",
+  "name": "hse-app-desktop",
   "private": true,
   "scripts": {
     "build": "nuxt build --prerender && electron-builder",
-    "dev": "nuxt dev --host",
+    "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
@@ -21,7 +21,7 @@
     "vue": "^3.3.7",
     "vue-router": "^4.2.5"
   },
-  "main": "dist-electron/main.js",
+  "main": "dist-electron/index.js",
   "version": "0.0.1",
   "dependencies": {
     "@mdi/font": "^7.3.67",
