--- a/package.json
+++ b/package.json
@@ -9,27 +9,31 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/devtools": "latest",
-    "@types/jsonwebtoken": "^9.0.4",
-    "@types/node": "^20.8.10",
+    "@nuxt/devtools": "1.0.8",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.11.0",
     "dotenv": "^16.3.1",
-    "electron": "^27.0.2",
-    "electron-builder": "^24.6.4",
+    "electron": "^28.1.3",
+    "electron-builder": "^24.9.1",
     "electron-store": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
-    "nuxt": "^3.8.0",
-    "nuxt-electron": "^0.6.0",
-    "sass": "^1.69.5",
-    "vite-plugin-electron": "^0.14.1",
+    "nuxt": "^3.9.1",
+    "nuxt-electron": "^0.7.0",
+    "sass": "^1.69.7",
+    "tree-kill": "^1.2.2",
+    "vite-plugin-electron": "^0.28.0",
     "vite-plugin-electron-renderer": "^0.14.5",
-    "vite-plugin-vuetify": "^1.0.2",
-    "vue": "^3.3.7",
+    "vite-plugin-vuetify": "^2.0.1",
+    "vue": "^3.4.11",
     "vue-router": "^4.2.5"
   },
   "main": "dist-electron/index.js",
   "version": "0.0.1",
   "dependencies": {
-    "@mdi/font": "^7.3.67",
-    "vuetify": "^3.3.23"
+    "@mdi/font": "^7.4.47",
+    "vuetify": "^3.4.10"
+  },
+  "resolutions": {
+    "jackspeak": "2.1.1"
   }
 }
