--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
   "trailingComma": "all",
   "semi": true,
   "singleQuote": true,
-  "endOfLine": "lf"
+  "endOfLine": "lf",
+  "printWidth": 120
 }
