--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@nuxt/devtools": "1.0.8",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.0",
+    "@vueuse/core": "^10.7.2",
+    "@vueuse/nuxt": "^10.7.2",
     "dotenv": "^16.3.1",
     "electron": "^28.1.3",
     "electron-builder": "^24.9.1",
@@ -19,7 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "nuxt": "^3.9.1",
     "nuxt-electron": "^0.7.0",
-    "sass": "^1.69.7",
+    "sass": "^1.70.0",
     "tree-kill": "^1.2.2",
     "vite-plugin-electron": "^0.28.0",
     "vite-plugin-electron-renderer": "^0.14.5",
