--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "hse-app-desktop",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "private": true,
   "scripts": {
     "build": "nuxt build && electron-builder",
     "dev": "nuxt dev",
     "generate": "nuxt generate && electron-builder",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "prepare": "nuxt generate",
+    "start": "electron ./dist-electron/index.js"
   },
   "devDependencies": {
     "@nuxt/devtools": "1.0.8",
@@ -18,7 +20,7 @@
     "dotenv": "^16.3.1",
     "electron": "^28.1.3",
     "electron-builder": "^24.9.1",
-    "electron-store": "^8.1.0",
+    "electron-store": "^8.2.0",
     "jsonwebtoken": "^9.0.2",
     "nuxt": "^3.9.1",
     "nuxt-electron": "^0.7.0",
@@ -62,7 +64,7 @@
           ]
         }
       ],
-      "artifactName": "${productName}_${version}.${ext}"
+      "artifactName": "${productName}_${version}_setup.${ext}"
     },
     "nsis": {
       "oneClick": false,
@@ -72,7 +74,8 @@
     },
     "files": [
       ".output/**/*",
-      "dist-electron"
+      "dist-electron",
+      ".env"
     ]
   }
 }
