--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "@vueuse/core": "^10.7.2",
     "@vueuse/nuxt": "^10.7.2",
     "dotenv": "^16.3.1",
-    "electron": "^28.1.3",
-    "electron-builder": "^24.9.1",
+    "electron": "^33.0.2",
+    "electron-builder": "^25.1.8",
     "electron-store": "^8.2.0",
     "jsonwebtoken": "^9.0.2",
     "nuxt": "^3.9.1",
@@ -52,6 +52,12 @@
     "appId": "hse.app.desktop",
     "asar": true,
     "productName": "HSE App Desktop",
+    "protocols": {
+      "name": "electron-deep-linking",
+      "schemes": [
+        "ruz-app-fiddle"
+      ]
+    },
     "directories": {
       "output": "release/${version}"
     },
@@ -78,10 +84,20 @@
       "allowToChangeInstallationDirectory": true,
       "deleteAppDataOnUninstall": false
     },
+    "linux": {
+      "mimeTypes": [
+        "x-scheme-handler/ruz-app-fiddle"
+      ],
+      "target": "pacman",
+      "desktop": {
+        "exec": "ruz-app-fiddle %u"
+      }
+    },
     "files": [
       ".output/**/*",
       "dist-electron",
       ".env"
     ]
-  }
+  },
+  "packageManager": "yarn@4.5.1+sha512.341db9396b6e289fecc30cd7ab3af65060e05ebff4b3b47547b278b9e67b08f485ecd8c79006b405446262142c7a38154445ef7f17c1d5d1de7d90bf9ce7054d"
 }
