--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hse-app-desktop",
-  "version": "1.0.10",
+  "version": "1.1.0",
   "private": true,
   "author": {
     "name": "Alex Koledaev",
@@ -105,6 +105,9 @@
       ],
       "category": "Application",
       "target": [
+        "appImage",
+        "deb",
+        "pacman",
         "tar.gz"
       ],
       "artifactName": "${name}-${version}-${os}.${ext}"
